--- a/index.html
+++ b/index.html
@@ -191,6 +191,123 @@
         bottom: 8%;
       }
     }
+
+    /* ===== Баннер установки PWA ===== */
+    .install-banner {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: linear-gradient(135deg, #015871 0%, #01374a 100%);
+      color: #fff;
+      padding: 1rem 1rem 1.2rem;
+      z-index: 9999;
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      gap: 0.6rem;
+      box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.3);
+      animation: slideUp 0.4s ease-out;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+    }
+
+    .install-banner.show {
+      display: flex;
+    }
+
+    @keyframes slideUp {
+      from {
+        transform: translateY(100%);
+      }
+
+      to {
+        transform: translateY(0);
+      }
+    }
+
+    .install-banner-header {
+      display: flex;
+      align-items: center;
+      gap: 0.7rem;
+      width: 100%;
+      max-width: 400px;
+    }
+
+    .install-banner-icon {
+      width: 48px;
+      height: 48px;
+      border-radius: 12px;
+      flex-shrink: 0;
+    }
+
+    .install-banner-text {
+      flex: 1;
+    }
+
+    .install-banner-title {
+      font-size: 1rem;
+      font-weight: 700;
+      margin: 0 0 0.15rem;
+    }
+
+    .install-banner-subtitle {
+      font-size: 0.8rem;
+      opacity: 0.85;
+      margin: 0;
+      line-height: 1.3;
+    }
+
+    .install-banner-close {
+      position: absolute;
+      top: 0.5rem;
+      right: 0.7rem;
+      background: none;
+      border: none;
+      color: rgba(255, 255, 255, 0.7);
+      font-size: 1.5rem;
+      cursor: pointer;
+      padding: 0.2rem;
+      line-height: 1;
+    }
+
+    .install-banner-close:hover {
+      color: #fff;
+    }
+
+    .install-banner-btn {
+      display: inline-block;
+      padding: 0.65rem 1.8rem;
+      background: #B61A44;
+      color: #fff;
+      border: none;
+      border-radius: 25px;
+      font-size: 0.95rem;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.3s, transform 0.2s;
+      text-align: center;
+    }
+
+    .install-banner-btn:hover {
+      background: #D12C5C;
+      transform: scale(1.03);
+    }
+
+    .install-banner-btn:active {
+      transform: scale(0.97);
+    }
+
+    .install-banner-steps {
+      font-size: 0.8rem;
+      opacity: 0.9;
+      text-align: center;
+      line-height: 1.5;
+      max-width: 340px;
+    }
+
+    .install-banner-steps b {
+      color: #ffcc00;
+    }
   </style>
 </head>
 
@@ -205,8 +322,24 @@
     <div class="wave"></div>
     <div class="wave wave-2"></div>
   </div>
-  <!-- Регистрация Service Worker для PWA -->
+
+  <!-- Баннер установки PWA -->
+  <div class="install-banner" id="installBanner">
+    <button class="install-banner-close" id="installClose" aria-label="Закрыть">&times;</button>
+    <div class="install-banner-header">
+      <img src="icon-192.png" alt="SMM" class="install-banner-icon">
+      <div class="install-banner-text">
+        <p class="install-banner-title">Установите приложение SMM</p>
+        <p class="install-banner-subtitle">Быстрый доступ с главного экрана</p>
+      </div>
+    </div>
+    <button class="install-banner-btn" id="installBtn">Установить</button>
+    <div class="install-banner-steps" id="installSteps"></div>
+  </div>
+
+  <!-- Регистрация SW + Умная установка PWA -->
   <script>
+    // === Service Worker ===
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
         navigator.serviceWorker.register('sw.js')
@@ -214,6 +347,110 @@
           .catch((err) => console.log('SW ошибка:', err));
       });
     }
+
+    // === Установка PWA ===
+    (function () {
+      const banner = document.getElementById('installBanner');
+      const btn = document.getElementById('installBtn');
+      const closeBtn = document.getElementById('installClose');
+      const stepsEl = document.getElementById('installSteps');
+
+      // Не показываем, если уже установлено (standalone)
+      if (window.matchMedia('(display-mode: standalone)').matches || navigator.standalone) {
+        return;
+      }
+
+      // Не показываем, если пользователь закрыл (помним 7 дней)
+      const dismissed = localStorage.getItem('pwa-banner-dismissed');
+      if (dismissed && Date.now() - parseInt(dismissed) < 7 * 24 * 60 * 60 * 1000) {
+        return;
+      }
+
+      // Определяем платформу и браузер
+      const ua = navigator.userAgent || '';
+      const isIOS = /iPad|iPhone|iPod/.test(ua) || (navigator.platform === 'MacIntel' && navigator.maxTouchPoints > 1);
+      const isAndroid = /Android/i.test(ua);
+      const isSamsung = /SamsungBrowser/i.test(ua);
+      const isOpera = /OPR|Opera/i.test(ua);
+      const isFirefox = /Firefox/i.test(ua) && !/Seamonkey/i.test(ua);
+      const isYandex = /YaBrowser/i.test(ua);
+      const isEdge = /Edg/i.test(ua);
+      const isChrome = /Chrome/i.test(ua) && !isOpera && !isEdge && !isSamsung && !isYandex;
+      const isSafari = /Safari/i.test(ua) && !isChrome && !isOpera && !isEdge && !isSamsung && !isYandex && !isFirefox;
+
+      let deferredPrompt = null;
+      let canNativeInstall = false;
+
+      // Перехватываем событие beforeinstallprompt (Chrome, Opera, Samsung, Edge, Yandex)
+      window.addEventListener('beforeinstallprompt', (e) => {
+        e.preventDefault();
+        deferredPrompt = e;
+        canNativeInstall = true;
+        showBanner('native');
+      });
+
+      // Показываем баннер с задержкой (3 сек) для браузеров без beforeinstallprompt
+      setTimeout(() => {
+        if (!canNativeInstall && !window.matchMedia('(display-mode: standalone)').matches) {
+          if (isIOS) {
+            showBanner('ios');
+          } else if (isFirefox && isAndroid) {
+            showBanner('firefox');
+          } else if (!canNativeInstall) {
+            showBanner('manual');
+          }
+        }
+      }, 3000);
+
+      function showBanner(mode) {
+        banner.classList.add('show');
+
+        if (mode === 'native') {
+          // Chromium-based: Chrome, Opera, Edge, Samsung, Yandex
+          btn.style.display = 'inline-block';
+          stepsEl.innerHTML = '';
+          btn.addEventListener('click', async () => {
+            if (deferredPrompt) {
+              deferredPrompt.prompt();
+              const { outcome } = await deferredPrompt.userChoice;
+              if (outcome === 'accepted') {
+                banner.classList.remove('show');
+              }
+              deferredPrompt = null;
+            }
+          });
+        } else if (mode === 'ios') {
+          // Safari на iOS
+          btn.style.display = 'none';
+          stepsEl.innerHTML = 'Нажмите <b>⬆ Поделиться</b> внизу экрана,<br>затем <b>«На экран «Домой»»</b>';
+        } else if (mode === 'firefox') {
+          // Firefox Android
+          btn.style.display = 'none';
+          stepsEl.innerHTML = 'Нажмите <b>⋮ (меню)</b> → <b>«Установить»</b>';
+        } else {
+          // Любой другой браузер
+          btn.style.display = 'none';
+          let browserName = 'браузера';
+          if (isOpera) browserName = 'Opera';
+          else if (isYandex) browserName = 'Яндекс Браузер';
+          else if (isSamsung) browserName = 'Samsung Internet';
+          else if (isEdge) browserName = 'Edge';
+          stepsEl.innerHTML = 'Откройте <b>меню ' + browserName + '</b><br>и выберите <b>«Добавить на главный экран»</b>';
+        }
+      }
+
+      // Закрытие баннера
+      closeBtn.addEventListener('click', () => {
+        banner.classList.remove('show');
+        localStorage.setItem('pwa-banner-dismissed', Date.now().toString());
+      });
+
+      // Прячем баннер после установки
+      window.addEventListener('appinstalled', () => {
+        banner.classList.remove('show');
+        console.log('PWA установлено!');
+      });
+    })();
   </script>
 </body>
 
